# multi-agent-system

./: .env.example  .gitignore  ARCHITECTURE.md  JADE.md  JADE_V2_TASK_LIST.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_google_sheet.py
agents/: __init__.py
app/: __init__.py  agent_registry.py  checkpoints.py  compaction.py  config.py  context_window.py  contracts.py  conversation_mode.py  frontmatter.py  graph.py  knowledge_paths.py  knowledge_status.py  language.py  llm_factory.py  main.py  messages.py  model_request.py  paths.py  pending_action_parser.py  pending_action_responder.py  pending_actions.py  pending_interactions.py  prompt_loader.py  reactive_recovery.py  rehydration.py  session_memory.py  session_memory_background.py  skill_runtime.py  skills.py  state.py  tool_registry.py  tool_runtime.py  utils.py
core/: config.py  document_conversion_rendering.py  gateway.py  graph.py  identity_map.py  interface_messages.py  knowledge_rendering.py  language.py  slack_formatting.py  state.py  telegram_formatting.py  web_conversations.py  web_markdown.py
deploy/: README.md
docs/: contributing.md  runtime.md
gateway/: AGENT.md  __init__.py  agent.py  matchers.py  model_router.py  routing_policy.py  skill_policy.py  text_utils.py  tool_intent.py
interfaces/: __init__.py  slack_home.py  slack_listener.py  telegram_listener.py  web_server.py
scripts/: run_adk_web.py
shared/: __init__.py  adk_utils.py  catalog.py  llm.py
tax_monitor_tool/: README.md  __init__.py  __main__.py  monitoring.py  runtime.py  service.py  verification.py
(+213 files in other folders)
